Fix margin in post which was causing unwanted horizontal scrolling.

--- a/styles/code_journal.css
+++ b/styles/code_journal.css
@@ -70,7 +70,7 @@ main .main-content {
 .date {
   color: rgb(250, 249, 244);
   overflow-wrap: break-word;
-  padding: 0 0 0 2%;
+  padding: 0 0 0 5%;
   margin: 5% 0 0 0;
 }
 
@@ -78,7 +78,6 @@ main .main-content {
   color: rgb(250, 249, 244);
   margin: 5%;
   height: 210px;
-  width: 90%;
   overflow-wrap: break-word;
   overflow: scroll;
   line-height: 1.5em;
